add reset page and navigate to her from login page

--- a/src/app/Auth/sign-up/sign-up.component.html
+++ b/src/app/Auth/sign-up/sign-up.component.html
@@ -23,11 +23,11 @@
     <div class="lg:basis-2/3 p-2 px-12 flex items-center justify-center">
       <div class="p-2 m-2 w-full h-full flex flex-col items-start">
         <p
-          class="text-2xl font-bold text-TextColor mb-2 text-primaryColor font-serif"
+          class="text-2xl font-bold text-TextColor my-2 text-primaryColor font-serif"
         >
           SignUp
-          <span class="text-textColor text-lg font-serif"
-            >Please enter your details</span
+          <sub class="text-textColor text-lg font-serif"
+            >Please enter your details</sub
           >
         </p>
 
